--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <div></div>
             <div></div>
         </main>
-        <button>PLAY AGAIN</button>
+        <button id="play_button">PLAY AGAIN</button>
     </body>
 </html>
